fixed centering and clicking on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,8 @@ a {
 .founderImage {
   margin-left:auto;
   margin-right:auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   /*float: left;*/
   width: 200px;
   height: 200px;
@@ -269,36 +271,75 @@ i:hover {
 
 /*THUMBNAIL HOVERPOPUPS*/
 
-.center {
-  margin: 0 auto;
-  width: 80%;
+/* centered columns styles */
+.row-centered {
+  text-align:center;
+}
+.col-centered {
+  display:inline-block;
+  float:none;
+  /* reset the text-align */
+  text-align:left;
+  /* inline-block space fix */
+  margin-right:-4px;
 }
 
-.founderPopup .founderContent * {
-  width: 200px;
-}
-
-.founderContent p {
-  margin-top: 15px;
-}
-
-.thumbnail  {
+.card {
+  display: inline-block;
+  margin-bottom: 20px;
+  margin-right: 0;
+  margin-left: 0;
   width: 250px;
-  background-color: rgba(0,0,0,0);
-  position: relative;
-  float: left;
-  /*z-index: 0;*/
+  border-radius: 5px;
+  border: 1px solid #b6b6b6;
 }
 
-.thumbnail:hover {
-  background-color: #e9e9e2;
-  z-index: 1000;
-  color: #335500;
-  text-decoration: none;
+.card:hover {
+  background: rgba(0, 60, 242, .2);
 }
+
+.card-detail {
+  margin-top: 5px;
+  background-color: #6d6d6d;
+  display: none;
+}
+
+.shown-card {
+  display: block;
+}
+
+.card-detail p {
+  color: #fff !important;
+  font-size: 18px;
+  padding: 10px;
+  margin: 0;
+}
+
+/*.founderPopup .founderContent * {*/
+  /*width: 200px;*/
+/*}*/
+
+/*.founderContent p {*/
+  /*margin-top: 15px;*/
+/*}*/
+
+/*.thumbnail  {*/
+  /*width: 250px;*/
+  /*background-color: rgba(0,0,0,0);*/
+  /*position: relative;*/
+  /*float: left;*/
+  /*/!*z-index: 0;*!/*/
+/*}*/
+
+/*.thumbnail:hover {*/
+  /*background-color: #e9e9e2;*/
+  /*z-index: 1000;*/
+  /*color: #335500;*/
+  /*text-decoration: none;*/
+/*}*/
 
 .thumbnail span { /*CSS for enlarged image*/
-  width: 250px;
+  /*width: 250px;*/
   position: absolute;
   background-color: #98ccf4;
   /*padding: 5px;*/
@@ -312,13 +353,13 @@ i:hover {
   left: -1px;
 }
 
-.thumbnail span img { /*CSS for enlarged image*/
-  border-width: 0px;
-  /*padding: 2px;*/
-}
+/*.thumbnail span img { /!*CSS for enlarged image*!/*/
+  /*border-width: 0px;*/
+  /*/!*padding: 2px;*!/*/
+/*}*/
 
-.thumbnail:hover span { /*CSS for enlarged image on hover*/
-  visibility: visible;
-  /*top: 0px; /!* use IF IE6 style to correct IE6 positions of larger image relative to thumb *!/*/
-  /*left: 0px;/!*position where enlarged image should offset horizontally *!/*/
-}
+/*.thumbnail:hover span { /!*CSS for enlarged image on hover*!/*/
+  /*visibility: visible;*/
+  /*/!*top: 0px; /!* use IF IE6 style to correct IE6 positions of larger image relative to thumb *!/!*/
+  /*/!*left: 0px;/!*position where enlarged image should offset horizontally *!/!*/
+/*}*/
